Fixed search bar margin on small width

--- a/style.css
+++ b/style.css
@@ -169,6 +169,10 @@ footer {
   .logo {
     font-size: 20px;
   }
+
+  #headerSearch {
+    margin-left: 0;
+  }
   
   .genre > p {
     font-size: 20px;
